# High-Performance-Interpreter

./: .gitignore  CMakeLists.txt
doc/: architectureDesign.txt  classDesign.txt  design.excalidraw
include/: fileReader.h  global.h  hpringbuffer.h  injector.h  instruction.h  instructionBase.h  instructionBuilder.h  interpreter.h  ringBuffer.h  stream_utils.h
src/: CMakeLists.txt  fileReader.cpp  injector.cpp  instruction.cpp  instructionBase.cpp  instructionBuilder.cpp  interpreter.cpp  main.cpp  ringBuffer.cpp
tests/: CMakeLists.txt  fileReaderTest.cpp  fullBufferData.txt  injectorTest.cpp  instructionBaseTest.cpp  instructionBuilderTest.cpp  instructionTest.cpp  interpreterTest.cpp  mainTest.cpp  testData.txt
